fix: change z-index so sidebar doesn't cover header

--- a/alpha/styles/foundation/_base.scss
+++ b/alpha/styles/foundation/_base.scss
@@ -45,7 +45,7 @@ body {
 main {
   position: relative;
   min-height: 350px;
-  z-index: 5;
+  z-index: 3;
 }
 
 footer {
